# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
backend/: pyproject.toml
backend/app/: ai.py  config.py  database.py  dependencies.py  main.py  models.py  nda.py  security.py  templates.py
backend/app/routes/: auth.py  chat.py  documents.py  drafts.py  static.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py  test_drafts.py  test_health.py  test_templates.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthScreen.test.tsx  AuthScreen.tsx  ChatPanel.test.tsx  ChatPanel.tsx  Disclaimer.tsx  DraftList.test.tsx  DraftList.tsx  LoginScreen.test.tsx  LoginScreen.tsx  NdaDocument.test.tsx  NdaDocument.tsx  NdaForm.tsx  TemplateDocument.test.tsx  TemplateDocument.tsx
frontend/src/lib/: api.test.ts  api.ts  documents.test.ts  documents.ts  nda.test.ts  nda.ts  standard-terms.ts  useDocument.test.tsx  useDocument.ts
scripts/: start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
